--- a/images/css/style.css
+++ b/images/css/style.css
@@ -507,14 +507,14 @@ a:active {
 .btnPrice{
     width: 25%;
     background-color: #F5F5F5;
-    background:#616161;
+    background: #9E9E9E;
     text-decoration: none;
     margin-left: 80px;
-    margin-top: 35px;
+    margin-top: 70px;
 
 }
 .colorText{
-    color: white;
+    color: #424242;
     text-decoration: none;
 }
 p{
@@ -525,22 +525,17 @@ p{
     line-height: 1.5em;
 }
 h2{
-    color: white;
+    color: #424242;
     font-style: bold;
 
-}
-h4, .h4 {
-    font-size: 18px;
-    color: white
 }
 /****************** Gallery1 *****************/
 .img-responsive{
     display: block;     
     max-width: 100%;
     height: auto;
-    padding: 8px 0;
+    padding: 15px 0;
     margin-top: 10px;
-    border-radius: 15px;
 }
 
 #imagerow1:hover{
@@ -556,6 +551,9 @@ h4, .h4 {
     border-radius: 5px;
     width:  100%;
     padding: 1px;    
+
+
+
 }
 .row1:hover.middleLayer{
     opacity: 1;
@@ -568,23 +566,59 @@ h4, .h4 {
     background-color:#222; 
 }
 
-/*/*********************  biography1.2.3 ***********************/
-.black{
-    background-color: #0e0e0e;
-}
+/*********************  biography ***********************/
+
 .photograph1{
-    color: white;
-    margin-top: -10px;
-}
-.portrait{
-    width: 500px;
-    border-radius: 10px;
-    margin-left: 550px;
-    margin-top: -430px;
-}
-.heading1{
-    color: white;
-    margin-top: 200px;
-    margin-left: auto;
+    color: #111;
 }
 
+.imgslide {
+    font-size: 40px;
+    padding: 40px;
+    background: #333;
+    color: #fff;
+}
+.imgslide:nth-of-type(1) {
+    margin-top: 0;
+    background-image:url("../images/ex8.jpg");
+    background-size:cover;
+    background-repeat:no-repeat;
+    padding: 0;
+    background-position: center;
+
+}
+.imgslide:nth-of-type(2) {
+    margin-top: 0;
+    background-image:url("../images/ex4.jpg");
+    background-size:cover;
+    background-repeat:no-repeat;
+    padding: 0;
+    background-position: center;
+
+
+}
+.imgslide:nth-of-type(3) {
+ margin-top: 0;
+    background-image:url("../images/ex5.jpg");
+    background-size:cover;
+    background-repeat:no-repeat;
+    padding: 0;
+    background-position: center;
+
+}
+.imgslide:nth-of-type(4) {
+    margin-top: 0;
+    background-image:url("../images/ex3.jpeg");
+    background-size:cover;
+    background-repeat:no-repeat;
+    padding: 0;
+    background-position: center;
+}
+.imgslide:nth-of-type(4) {
+     margin-top: 0;
+    background-image:url("../images/ex7.jpg");
+    background-size:cover;
+    background-repeat:no-repeat;
+    padding: 0;
+    background-position: center;
+}
